--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+  <% if notice -%>
+    <p class="notice"><%= notice %></p>
+  <% end -%>
+  
   <% if alert -%>
     <p class="alert"><%= alert %></p>
   <% end -%>
