--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Wisdombiscuit</title>
   <%= stylesheet_link_tag :all %>
+  <%= javascript_include_tag 'http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js' %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
