--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,7 +1,5 @@
-body { background-color: #fff; color: #333; }
-
 body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
+  font-family: verdana, helvetica, arial, sans-serif;
   font-size:   13px;
   line-height: 18px;
 }
