--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,3 +1,11 @@
+/*
+ * This is a manifest file that'll automatically include all the stylesheets available in this directory
+ * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
+ * the top of the compiled file, but it's generally better to create a new file per style scope.
+ *= require_self
+ *= require_tree . 
+*/
+
 html, body {
 	height: 100%;
 }
@@ -80,3 +88,4 @@ h1 {
   -webkit-box-shadow: inset 0 0 4px 2px #abbccf, 0 0 1px 0 #eee;
   box-shadow: inset 0 0 4px 2px #abbccf;
 }
+
