--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Wisdombiscuit</title>
-  <%= stylesheet_link_tag     'http://fonts.googleapis.com/css?family=Lobster' %>
-  <%= stylesheet_link_tag     "application" %>
-  <%= stylesheet_link_tag     'themes/fire',  :title => 'fire' %>
-  <%= stylesheet_link_tag     'themes/jade',  :title => 'jade',   :rel => 'alternate stylesheet' %>
-  <%= stylesheet_link_tag     'themes/night', :title => 'night',  :rel => 'alternate stylesheet' %>
-  <%= stylesheet_link_tag     'themes/day',   :title => 'day',    :rel => 'alternate stylesheet' %>
+  <title>Wisdom Biscuit</title>
+  <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Lobster' %>
+  <%= stylesheet_link_tag "application" %>
+
+  <%= stylesheet_link_tag 'themes/fire', :title => 'fire' %>
+  <% ['jade', 'night', 'day'].each do |theme| %>
+    <%= stylesheet_link_tag "themes/#{theme}", :title => theme, :rel => 'alternate stylesheet' %>
+  <% end %>
   
   <%= javascript_include_tag  "application" %>
   
   <%= csrf_meta_tags %>
 </head>
 <body id="wisdombiscuit-com">
+
+<header>
+  <h1>
+    <%= link_to 'Wisdom Biscuit', '/' %>
+  </h1>
+  
+  <nav>
+    <ul>
+      <% if user_signed_in? %>
+        <li><%= link_to 'Fortunes', fortunes_path %></li>
+        <li>
+          <%= image_tag current_user.gravatar_url %>
+          <%= link_to current_user.email, edit_user_registration_path %>
+        </li>
+        <li><%= link_to 'Sign out', destroy_user_session_path %></li>
+      <% else %>
+        <li><%= link_to 'Sign in', new_user_session_path %></li>
+        <li><%= link_to 'Sign up', new_user_registration_path %></li>
+      <% end %>
+    </ul>
+  </nav>
+</header>
 
 <div id="content">
   <% flash.each do |name, msg| %>
