--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,19 +2,11 @@
 <html>
 <head>
   <title>Wisdom Biscuit</title>
-  <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Lobster' %>
-  <%= stylesheet_link_tag "application" %>
-
-  <%= stylesheet_link_tag 'themes/fire', :title => 'fire' %>
-  <% ['jade', 'night', 'day'].each do |theme| %>
-    <%= stylesheet_link_tag "themes/#{theme}", :title => theme, :rel => 'alternate stylesheet' %>
-  <% end %>
-  
+  <%= stylesheet_link_tag     "application" %>
   <%= javascript_include_tag  "application" %>
-  
   <%= csrf_meta_tags %>
 </head>
-<body id="wisdombiscuit-com" class="<%= params[:controller]%> <%= params[:action]%>">
+<body id="wisdombiscuit-com">
 
 <header>
   <h1>
