added github-style css3 buttons. tweaked to support rails 3.1

--- a/app/views/fortunes/_form.html.erb
+++ b/app/views/fortunes/_form.html.erb
@@ -16,6 +16,6 @@
     <%= f.text_field :text %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= approve_button_tag 'Save' %>
   </div>
 <% end %>
