--- a/app/views/fortunes/index.html.erb
+++ b/app/views/fortunes/index.html.erb
@@ -11,13 +11,17 @@
 <% @fortunes.each do |fortune| %>
   <tr>
     <td><%= fortune.text %></td>
-    <td><%= link_to 'Show', fortune %></td>
-    <td><%= link_to 'Edit', edit_fortune_path(fortune) %></td>
-    <td><%= link_to 'Destroy', fortune, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td>
+      <%= button_group do %>
+        <%= primary_log_button_link_to 'Show', fortune %>
+        <%= edit_button_link_to 'Edit', edit_fortune_path(fortune) %>
+        <%= remove_negative_button_link_to 'Destroy', fortune, :confirm => 'Are you sure?', :method => :delete %>
+      <% end %>
+    </td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Fortune', new_fortune_path %>
+<%= add_button_link_to 'New Fortune', new_fortune_path %>
