--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,21 +21,43 @@ img {
 }
 
 header {
-	height: 30px;
-	line-height: 30px;
+	height: 26px;
+	line-height: 26px;
 	padding: 4px;
-	background-color: #111;
+	background-color: #151515;
 	
+	a {
+		text-decoration: none;
+		color: #fff;
+	}
+
 	ul {
 		margin: 0 1em;
 		padding: 0;
 		list-style: none;
 		float: right;
-		line-height: 30px;
+		line-height: 26px;
 		
 		li {
 			display: inline;
 			margin-left: 1em;
+			
+			a {
+				text-decoration: none;
+				padding: 0 8px;
+				color: #888;
+				text-shadow: 1px 1px 0 #000;
+
+				&:hover {
+					color: #151515;
+					text-shadow: 1px 1px 0 #ccc;
+					background-color: #888;
+
+					-webkit-border-radius: 9px;
+					   -moz-border-radius: 9px;
+					        border-radius: 9px;
+				}
+			}
 		}
 	}
 	
@@ -43,16 +65,7 @@ header {
 		float: left;
 		margin: 0 0 0 0.5em;
 		padding: 0;
-		font-size: 24px;
-	}
-	
-	a {
-		text-decoration: none;
-		color: #fff;
-	
-		&:visited {
-			color: #fff;
-		}
+		font-size: 22px;
 	}
 }
 
